Add argument passing with navigation component.

--- a/app/src/main/res/layout/fragment_details_entry.xml
+++ b/app/src/main/res/layout/fragment_details_entry.xml
@@ -73,6 +73,7 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/nameET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusedByDefault="false"
