--- a/app/src/main/res/layout/fragment_bmiresult.xml
+++ b/app/src/main/res/layout/fragment_bmiresult.xml
@@ -7,7 +7,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BMIResultFragment"
+    tools:context=".BmiResultFragment"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -61,7 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBar"
-        tools:context=".BMIResultFragment">
+        tools:context=".BmiResultFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/titleLayout"
